fix: adjust margin and width of hr element in browse summary for better alignment + decrease gap between y labels and frame in ethnicity chart

--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -1238,7 +1238,8 @@ div.browse-summary {
 		}
 
 		hr {
-			margin: 1rem 0 0.25rem 0;
+			margin: 1rem 0 0.25rem -1.25rem;
+			width: calc(100% + 2.5rem);
 		}
 	}
 
